# c-compiler

./: CMakeLists.txt  main.cpp
include/lexer/: lexer.cpp  lexer.hpp  token.hpp  token_helpers.hpp
include/parser/: ast.hpp  parser.hpp
lib/: debug.hpp  utility.hpp
src/: lexer.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
tests/: lexer_tests.cpp
